--- a/assets/css/om_styles.css
+++ b/assets/css/om_styles.css
@@ -331,6 +331,10 @@ table {
 --------------------------------------------------------------*/
 /* Layout */
 /* content */
+h3{
+  font-size: 1em !important;
+}
+
 .container-fluid {
   clear: both; }
 
@@ -382,11 +386,13 @@ table {
   top: 50%;
   -webkit-transform: translate(0, -50%);
   -ms-transform: translate(0, -50%);
-  transform: translate(0, -50%); }
+  transform: translate(0, -50%);
+  z-index:100; }
 
 .info-proyecto {
   bottom: 50px;
-  position: absolute; }
+  position: absolute;
+  z-index:100; }
   .info-proyecto span {
     margin-right: 30px; }
 
@@ -424,6 +430,10 @@ nav, .filtro-proyectos {
 .filtro-proyectos {
   text-align: center;
  }
+
+ .filtro-proyectos a {
+    cursor: pointer;
+}
 
 .sticky{
   padding-top: 20px;
@@ -463,7 +473,6 @@ nav, .filtro-proyectos {
 
 .cabecera {
   width: 100%;
-  background-image: url("../images/fondo-reel.jpg");
   background-repeat: no-repeat;
   background-size: 75%;
   background-position: center center;
@@ -491,7 +500,8 @@ nav, .filtro-proyectos {
   width: 100%;
   max-height: 1000px;
   -o-object-fit: contain;
-  object-fit: contain; }
+  object-fit: contain;
+  height: 100%; }
 
 .texto-proxecto {
   margin-bottom: 100px; }
@@ -681,11 +691,8 @@ ul.nav-items{
   width: 100%;
 }
 
-h2.cliente span.web{
-  font-size: .4em;
-}
-h2.cliente span.web a:hover{
-  border-bottom: 2px solid white;
+h2.cliente a:hover {
+  border-bottom: 3px solid white !important; 
 }
 
   img[usemap] {
@@ -693,6 +700,56 @@ h2.cliente span.web a:hover{
     height: auto;
     max-width: 100%;
   }
+
+.videos-proxecto{
+  margin-bottom: 50px;
+}
+
+a:hover, p a:hover,span a:hover{
+  border-bottom: 2px solid white !important; 
+}
+
+.home .cabecera{
+  margin-bottom: 100px; 
+}
+
+
+.cabecera-proyecto .mask {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 99;
+    background: black;
+    opacity: 0.25;
+}
+
+#reel{
+ position: relative;
+ background: transparent;
+}
+
+.ytplayer-container {
+    position: absolute;
+    top: 0;
+    z-index: -1;
+    width: 80%;
+    margin: 0 auto;
+    text-align: center;
+    left: 10%;
+    overflow: hidden;
+    height: 100% !important;
+}
+
+.home .site-header{
+  height: 0px;
+}
+
+.navbar.center h3 {
+    text-align: center;
+    margin: 0 auto;
+}
 
 @media (max-width: 1024px) {
   h1{
@@ -733,6 +790,9 @@ h2.cliente span.web a:hover{
   iframe{
     height: 500px;
   }
+    h2.cliente a:hover {
+  border-bottom: 2px solid white !important; 
+}
 
   }
 
@@ -756,6 +816,11 @@ h2.cliente span.web a:hover{
   iframe{
     height: 300px;
   }
+  .container .row{
+        margin-left: 0px;
+        margin-right: 0px;
+}
+
 
   }
 
@@ -773,6 +838,7 @@ h2.cliente span.web a:hover{
 #cluetip {
   z-index: 4000 !important;
 }
+
 
 
 
